# c-web-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  References.txt  server.c  server.out
.github/workflows/: cmake.yml
lib/: CMakeLists.txt  a.out  get_exec_path.c  get_exec_path.h  logger.c  logger.h
lib/console_utils/: console_utils.h
lib/get_exec_path/: get_exec_path.c
lib/logger/: logger.c  logger.h
src/: CMakeLists.txt  config.h  main.c  server.c  server.h  server_utils.c  server_utils.h
src/html/: 404.html  405.html  hello.html  index.html
src/response_templates/: 404.txt  405.txt
tests/: CMakeLists.txt  test_check_port_validity.c  test_create_socket.c  unit_tests.c
